--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,352 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-*/
-
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--main-text-color);
+  font-family: var(--main-font), sans-serif;
+  background-image: var(--page-background-gradient);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--card-text-weight);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  box-sizing: border-box;
+  margin: 100px 0 93px;
+  border: var(--content-border);
+  padding: clamp(7.625rem, 0.751vw + 7.449rem, 8.125rem) 0;
+  font-family: var(--accent-font);
+  background-color: var(--content-background-color, #fff);
+  inline-size: var(--content-width);
+}
+
+.header__title {
+  font-size: var(--header-title-size);
+}
+
+.header__text {
+  font-size: var(--header-text-size);
+  text-transform: uppercase;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  inline-size: var(--content-width);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: var(--content-border);
+  background-color: var(--content-background-color, #fff);
+}
+
+.card__title {
+  padding: 4px 10px;
+  font-weight: var(--card-title-weight);
+  font-size: var(--card-title-size);
+}
+
+.card__image-container {
+  position: relative;
+  border-top: var(--content-border);
+  border-bottom: var(--content-border);
+  overflow: hidden;
+  block-size: var(--image-container-size);
+}
+
+.card__image {
+  display: block;
+  object-fit: cover;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.brightness-filter {
+  filter: brightness(200%);
+}
+
+.contrast-filter {
+  filter: contrast(200%);
+}
+
+.blur-filter {
+  filter: blur(0.3rem);
+}
+
+.hue-rotate-filter {
+  filter: hue-rotate(-174deg);
+}
+
+.saturate-filter {
+  filter: saturate(160%);
+}
+
+.sepia-filter {
+  filter: sepia(75%);
+}
+
+.contrast-brightness-filter {
+  filter: contrast(2) brightness(150%);
+}
+
+.card__image-label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  opacity: 50%;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+  mix-blend-mode: hard-light;
+}
+
+@supports ((text-stroke: 1px #fff) or (-webkit-text-stroke: 1px #fff)) {
+  .card__image-label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px #fff;
+    text-stroke: 1px #fff;
+  }
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 24.5px;
+  padding: 25px 25px 22px 25px;
+}
+
+.card__content-text {
+  font-size: var(--card-text-size);
+  line-height: 21px;
+}
+
+.card__like {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 3px;
+  padding: 0 25px 25px 0;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.button__text {
+  z-index: 2;
+  color: var(--text-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  mix-blend-mode: difference;
+}
+
+.card__icon-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+  block-size: 38px;
+}
+
+.card__icon-button:focus-visible {
+  border: var(--content-border);
+  outline: none;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.heart {
+  transform-origin: center;
+}
+
+.card__like-icon.is-liked .heart {
+  animation: heart-scale 0.3s ease-in 0.1s;
+}
+
+.like-icon__sparks {
+  opacity: 0;
+}
+
+.card__like-icon.is-liked .like-icon__sparks {
+  animation: sparks-animation 0.3s ease-in 0.3s;
+}
+
+.like-icon__contour {
+  transition: fill 0.1s linear;
+}
+
+.card__like-icon.is-liked .like-icon__contour {
+  fill: var(--animation-fill-color);
+  transition-delay: 0.06s;
+}
+
+.like-icon__core {
+  transition: fill 0.3s linear 0.03s;
+}
+
+.card__like-icon:hover .like-icon__core {
+  fill: var(--like-icon-hover-color, #000);
+  transition-delay: 0s;
+}
+
+.card__like-icon:active .like-icon__core {
+  fill: var(--animation-fill-color);
+  transition-delay: 0s;
+}
+
+.card__like-icon.is-liked .like-icon__core {
+  fill: var(--animation-fill-color);
+  transition-delay: 0s;
+}
+
+.like-icon__main-body {
+  transition: fill 0.3s linear;
+}
+
+.card__like-icon:hover .like-icon__main-body {
+  fill: var(--like-icon-hover-color, #000);
+  transition-delay: 0.05s;
+}
+
+.card__like-icon:active .like-icon__main-body {
+  fill: var(--animation-fill-color);
+  transition-delay: 0.05s;
+}
+
+.card__like-icon.is-liked .like-icon__main-body {
+  fill: var(--animation-fill-color);
+  transition-delay: 0.05s;
+}
+
+.card__like-button {
+  box-sizing: border-box;
+  border: var(--content-border);
+  padding: 10px 0;
+  inline-size: 132px;
+}
+
+.save-button {
+  justify-self: center;
+  gap: 8px;
+  box-sizing: border-box;
+  margin: 49px 0 96px;
+  border: var(--content-border);
+  padding: 17px 20px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.floppy-icon {
+  color: #fff;
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  display: none;
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px;
+  text-transform: uppercase;
+  inline-size: 353px;
+}
+
+.dialog[open] {
+  display: flex;
+}
+
+.dialog[open]::backdrop {
+  opacity: 75%;
+  background-color: var(--accent-color);
+}
+
+.dialog__floppy-icon {
+  min-inline-size: 39px;
+  min-block-size: 39px;
+}
+
+.dialog__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  line-height: 150%;
+}
+
+.dialog__button-ok {
+  border: var(--content-border);
+  padding: 12.5px 0;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.card__like-button,
+.save-button,
+.dialog__button-ok {
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button:focus,
+.save-button:focus,
+.dialog__button-ok:focus {
+  box-shadow: 2px 2px 0 var(--accent-color);
+  outline: none;
+}
+
+.card__like-button::before,
+.save-button::before,
+.dialog__button-ok::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100%);
+}
+
+.card__like-button:hover::before,
+.save-button:hover::before,
+.dialog__button-ok:hover::before {
+  transform: translateX(0);
+}
+
+@media (width < 376px) {
+  .save-button {
+    flex-direction: column;
+    margin: 45px 0 98px;
+  }
+
+  .header {
+    margin-bottom: 96px;
+  }
+
+  .card__content {
+    gap: 23.5px;
+  }
+
+  .floppy-icon {
+    inline-size: 28px;
+    block-size: 28px;
+  }
 }
