--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--main-text-color);
+  color: var(--main-text-color, #000);
   font-family: var(--main-font), sans-serif;
   background-image: var(--page-background-gradient);
   background-size: cover;
   background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-variation-settings: "wght" var(--card-text-weight);
+  font-variation-settings: "wght" var(--card-text-weight, 410);
 }
 
 .header {
@@ -21,7 +21,7 @@
   margin: 100px 0 93px;
   border: var(--content-border);
   padding: clamp(7.625rem, 0.751vw + 7.449rem, 8.125rem) 0;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), 'Courier New';
   background-color: var(--content-background-color, #fff);
   inline-size: var(--content-width);
 }
@@ -51,7 +51,7 @@
 
 .card__title {
   padding: 4px 10px;
-  font-weight: var(--card-title-weight);
+  font-weight: var(--card-title-weight, 715);
   font-size: var(--card-title-size);
 }
 
@@ -103,7 +103,7 @@
   top: 25px;
   right: 25px;
   opacity: 50%;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), 'Courier New';
   font-size: 14px;
   text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
   mix-blend-mode: hard-light;
@@ -148,8 +148,8 @@
 
 .button__text {
   z-index: 2;
-  color: var(--text-color);
-  font-family: var(--accent-font);
+  color: var(--text-color, #fff);
+  font-family: var(--accent-font), 'Courier New';
   font-size: 14px;
   mix-blend-mode: difference;
 }
@@ -194,7 +194,7 @@
 }
 
 .card__like-icon.is-liked .like-icon__contour {
-  fill: var(--animation-fill-color);
+  fill: var(--animation-fill-color, #ff0000);
   transition-delay: 0.06s;
 }
 
@@ -208,12 +208,12 @@
 }
 
 .card__like-icon:active .like-icon__core {
-  fill: var(--animation-fill-color);
+  fill: var(--animation-fill-color,#ff0000);
   transition-delay: 0s;
 }
 
 .card__like-icon.is-liked .like-icon__core {
-  fill: var(--animation-fill-color);
+  fill: var(--animation-fill-color, #ff0000);
   transition-delay: 0s;
 }
 
@@ -227,12 +227,12 @@
 }
 
 .card__like-icon:active .like-icon__main-body {
-  fill: var(--animation-fill-color);
+  fill: var(--animation-fill-color,#ff0000);
   transition-delay: 0.05s;
 }
 
 .card__like-icon.is-liked .like-icon__main-body {
-  fill: var(--animation-fill-color);
+  fill: var(--animation-fill-color, #ff0000);
   transition-delay: 0.05s;
 }
 
@@ -251,7 +251,6 @@
   border: var(--content-border);
   padding: 17px 20px;
   background-color: #fff;
-  cursor: pointer;
 }
 
 .floppy-icon {
@@ -276,7 +275,7 @@
 
 .dialog[open]::backdrop {
   opacity: 75%;
-  background-color: var(--accent-color);
+  background-color: var(--accent-color, #000);
 }
 
 .dialog__floppy-icon {
@@ -296,7 +295,6 @@
   border: var(--content-border);
   padding: 12.5px 0;
   text-transform: uppercase;
-  cursor: pointer;
 }
 
 .card__like-button,
@@ -310,7 +308,7 @@
 .card__like-button:focus,
 .save-button:focus,
 .dialog__button-ok:focus {
-  box-shadow: 2px 2px 0 var(--accent-color);
+  box-shadow: 2px 2px 0 var(--accent-color, #000);
   outline: none;
 }
 
@@ -320,7 +318,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-color: var(--accent-color);
+  background-color: var(--accent-color, #000);
   transition: transform 0.5s ease-in-out;
   transform: translateX(-100%);
 }
